# lavoce

./: .bumpversion.cfg  .env.example  .gitignore  .mcp.json  .npmrc  CHANGELOG.md  DEVELOPMENT.md  README.md  SECURITY.md  justfile  package.json
.agents/skills/add-tts-engine/: SKILL.md
.agents/skills/draft-release-notes/: SKILL.md
.agents/skills/release-bump/: SKILL.md
.github/workflows/: build-windows.yml  ci.yml
app/: index.html  package.json  tsconfig.json  vite.config.ts
app/plugins/: changelog.ts
app/src/: App.tsx  global.d.ts  index.css  main.tsx  router.tsx
backend/: __init__.py  app.py  build_binary.py  config.py  env.py  models.py  requirements.txt
backend/backends/: __init__.py  freellmapi_backend.py  microsoft_stt_backend.py
backend/database/: __init__.py  migrations.py  models.py  session.py
backend/routes/: __init__.py  captures.py  health.py  settings.py  tasks.py  transcription.py
backend/services/: captures.py  llm.py  refinement.py  settings.py  task_queue.py  transcribe.py
backend/tests/: test_audio_preprocess.py  test_client_id_middleware.py  test_extraction_pipeline.py  test_freellmapi_config.py  test_microsoft_stt_backend.py  test_offline_guard.py  test_personality_samples.py  test_qwen_download.py  test_refinement_collapse.py  test_refinement_samples.py
backend/utils/: audio.py  capture_chords.py
docs/: PROJECT_STATUS.md  README.md  fable-persona.md  mdx-components.tsx  next.config.mjs  openapi.json  package.json
docs/app/: global.css
docs/components/: api-page.client.tsx
docs/lib/: layout.shared.tsx  openapi.ts  source.ts
docs/plans/: 2026-07-07-001-feat-lavoce-captures-only-windows-plan.md  DOCKER_DEPLOYMENT.md  MACOS_NOTARIZATION.md  MCP_SERVER.md  OPENAI_SUPPORT.md  VOICE_IO.md
docs/scripts/: generate-openapi.ts
scripts/: build-server.sh  setup-dev-sidecar.js
tauri/: index.html  package.json  tsconfig.json  vite.config.ts
tauri/src/: main.tsx
tauri/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: audio_output.rs  focus_capture.rs  hotkey_monitor.rs  input_monitoring.rs  key_codes.rs  keyboard_layout.rs  main.rs  synthetic_keys.rs
tauri/src-tauri/src/audio_capture/: linux.rs  mod.rs
web/: package.json  tsconfig.json  vite.config.ts
web/src/: main.tsx
(+198 files in other folders)
